--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,10 +24,19 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+	/**
+	 * Security
+	 */
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-oauth2-client'
+
+	/**
+	 * Gson
+	 */
+	implementation 'com.google.code.gson:gson'
 
 	/**
 	 * Lombok
@@ -44,6 +53,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.1', 'io.jsonwebtoken:jjwt-jackson:0.11.1'
 
+	/**
+	 * Database
+	 */
 	runtimeOnly 'mysql:mysql-connector-java'
 	implementation "org.flywaydb:flyway-core"
 
@@ -58,7 +70,6 @@ test {
  * Flyway
  *************************/
 flyway {
-//    schemas = ['apjung']
 	baselineVersion = 0
 	encoding = 'UTF-8'
 	validateOnMigrate = true
