--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -59,11 +59,42 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	implementation "org.flywaydb:flyway-core"
 
+	/**
+	 * QueryDSL
+	 */
+	implementation("com.querydsl:querydsl-core") // querydsl
+	implementation("com.querydsl:querydsl-jpa") // querydsl
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
+	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
+
+	/**
+	 * p6spy
+	 */
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
+
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
 	useJUnitPlatform()
+}
+
+/*************************
+ * Query DSL
+ *************************/
+def generated='src/main/generated'
+sourceSets {
+	main.java.srcDirs += [ generated ]
+}
+
+tasks.withType(JavaCompile) {
+	options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+}
+
+clean.doLast {
+	file(generated).deleteDir()
 }
 
 /*************************
