--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,6 +6,15 @@ spring:
     url: 'jdbc:mysql://127.0.0.1:3306/taskagile?serverTimezone=Asia/Seoul&charset=UTF-8'
     username: root
     password: pass
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        format_sql: true
+
+logging.level:
+  org.hibernate.SQL: debug
 
 kakao:
   client:
