--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,13 +1,10 @@
 server:
   port: 8081
+
 spring:
   profiles:
-    active: local
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: 'jdbc:mysql://127.0.0.1:3306/taskagile?serverTimezone=Asia/Seoul&charset=UTF-8'
-    username: root
-    password: pass
+    include:
+      - db
   jpa:
     hibernate:
       ddl-auto: validate
