--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
           - '$HOME/.gradle'
 
       before_install:
-        - cd back-end/
+        - cd backend/
         - chmod +x gradlew
 
       script: "./gradlew clean build"
