--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,13 @@ matrix:
       script: "./gradlew clean build"
 
       before_deploy:
-        - zip -r Taskagile-Vue-Springboot *
-        - mkdir -p deploy
-        - mv Taskagile-Vue-Springboot.zip deploy/Taskagile-Vue-Springboot.zip
+        - mkdir -p before-deploy
+        - cp scripts/*.sh before-deploy/
+        - cp appspec.yml before-deploy/
+        - cp build/libs/*.jar before-deploy/
+        - cd before-deploy && zip -r before-deploy *
+        - cd ../ && mkdir -p deploy
+        - mv before-deploy/before-deploy.zip deploy/Taskagile-Vue-Springboot.zip
       deploy:
         - provider: s3
           access_key_id: $AWS_ACCESS_KEY
@@ -31,6 +35,18 @@ matrix:
           skip_cleanup: true
           acl: private
           local_dir: deploy
+          wait-until-deployed: true
+
+        - provider: codedeploy
+          access_key_id: $AWS_ACCESS_KEY
+          secret_access_key: $AWS_SECRET_KEY
+          bucket: taskagile-backend-build
+          key: Taskagile-Vue-Springboot.zip # 빌드 파일 압축해서 전달
+
+          bundle_type: zip # 압축 확장자
+          application: taskagile-test # 웹 콘솔에서 등록한 CodeDeploy 애플리케이션
+          deployment_group: taskagile-test-group # 웹 콘솔에서 등록한 CodeDeploy 배포그룹
+          region: ap-northeast-2
           wait-until-deployed: true
 
 notifications:
