--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -81,6 +81,10 @@ test {
 	useJUnitPlatform()
 }
 
+jar {
+	enabled = false
+}
+
 /*************************
  * Query DSL
  *************************/
