backend 무중단 배포 테스트

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -45,3 +45,21 @@ spring:
     url: 'jdbc:mysql://127.0.0.1:3306/taskagile?serverTimezone=Asia/Seoul&charset=UTF-8'
     username: root
     password: pass
+
+---
+spring:
+  config:
+    activate:
+      on-profile: deploy1
+
+server:
+  port: 8081
+
+---
+spring:
+  config:
+    activate:
+      on-profile: deploy2
+
+server:
+  port: 8082
